--- a/index.html
+++ b/index.html
@@ -3,30 +3,101 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Project 2</title>
+    <title>Streetlamp</title>
     <style> 
-      html {
-        box-sizing: border-box;
-      }
+    	@import url('https://fonts.googleapis.com/css2?family=Cairo:wght@300;400;600&family=Changa:wght@300;400;500&display=swap');
 
-      *, *:before; *:after; {
-        box-sizing: inherit;
-      }
+		html {
+			box-sizing: border-box;
+		}
 
-      body {
-        padding: 0; 
-        margin: 0;
-      }
+		*, *:before; *:after; {
+			box-sizing: inherit;
+		}
 
-      iframe {
-        display: block;
-        margin: auto;
-        border: none;
-        border-radius: 0px;
-        position: absolute;
-        width: 100%;
-        height: 100%;
-      }
+		body {
+			padding: 0; 
+			margin: 0;
+			text-align: center;
+			background-color: #351827;
+			user-select: none;
+		}
+
+		p {
+			font-size: 18px;
+		}
+
+		p, h1, h2, h3, h4, h5 {
+			color: #F89E4C;
+			font-family: 'Cairo', sans-serif;
+		}
+
+		h1, h2, h3, h4, h5 {
+			font-family: 'Changa', sans-serif;
+		}
+
+		iframe {
+			display: block;
+			margin: auto;
+			border: none;
+			border-radius: 0px;
+			position: absolute;
+			width: 1366px;
+			height: 768px;
+		}
+
+		header {
+			display: block;
+			margin: auto;
+			text-align: left;
+			width: 1366px;
+			height: 90px;
+		}
+
+		nav {
+			width: 500px;
+			height: 90px;
+			position: absolute;
+			top: 0%;
+			right: 50px;
+			opacity: 50%;
+			transition: 0.2s;
+		}
+
+		nav:hover {
+			opacity: 95%;
+		}
+
+		#container_img {
+			display: flex;
+			justify-content: space-around;
+			align-items: flex-end;
+			margin-top: 15px;
+		}
+
+		#container_img img {
+			width: 90px;
+			height: 60px;
+		}
+
+		#container_p {
+			display: flex;
+			justify-content: space-around;
+			align-items: flex-end;
+			margin-top: -25px;
+		}
+
+		#container_p p {
+			width: 90px;
+			height: 10px;
+		}
+
+		#frame {
+			position: absolute;
+			width: 100%;
+			height: 100%;
+			z-index: -10;
+		}
     </style>
     <script src="lib/p5.js"></script>
     <script src="lib/p5.sound.js"></script>
@@ -37,6 +108,31 @@
     <link rel="shortcut icon" href="favicon.png" />
   </head>
   <body>
-    <script src="sketch.js"></script>
+  	    <div id="frame">
+  	    	<img src="assets/img/frame.png" alt="decorative frame" draggable="false" style="display:inline; position: static; margin-top: 75px;">
+  	    </div>
+
+    	<script src="sketch.js" style="display: block;"></script>
+
+    	<header>
+    		<h1>Streetlamp</h1>
+    	</header>
+
+    	<nav>
+    		<div id="container_img">
+	    		<img src="assets/img/ctrl/wasd.png" alt="WASD keys" draggable="false">
+	    		<img src="assets/img/ctrl/f_key.png" alt="F key" draggable="false">
+	    		<img src="assets/img/ctrl/i_key.png" alt="I key" draggable="false">
+	    		<img src="assets/img/ctrl/spacebar.png" alt="Spacebar" draggable="false">
+    		</div>
+    		<div id="container_p">
+	    		<p>move</p>
+	    		<p>fullscreen</p>
+	    		<p>instructions</p>
+	    		<p>use power</p>
+			 </div>
+    	</nav>
+
+    </div>
   </body>
 </html>
