--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
     <script src="lib/p5.timer.js"></script>
     <script src="lib/p5.clickable.js"></script>
     <script src="lib/p5.debugScreen.js"></script>
+    <script src="lib/p5.2DAdventure.js"></script>
     <link rel="shortcut icon" href="favicon.png" />
   </head>
   <body>
