--- a/index.html
+++ b/index.html
@@ -106,11 +106,11 @@
     <script src="lib/p5.clickable.js"></script>
     <script src="lib/p5.debugScreen.js"></script>
     <script src="lib/p5.2DAdventure.js"></script>
-    <link rel="shortcut icon" href="favicon.png" />
+    <link rel="shortcut icon" href="assets/favicon.png" />
   </head>
   <body>
   	    <div id="frame">
-  	    	<img src="assets/img/frame.png" alt="decorative frame" draggable="false" style="display:inline; position: static; margin-top: 75px;">
+  	    	<img src="assets/frame.png" alt="decorative frame" draggable="false" style="display:inline; position: static; margin-top: 75px;">
   	    </div>
 
     	<script src="sketch.js" style="display: block;"></script>
@@ -121,10 +121,10 @@
 
     	<nav>
     		<div id="container_img">
-	    		<img src="assets/img/ctrl/wasd.png" alt="WASD keys" draggable="false">
-	    		<img src="assets/img/ctrl/f_key.png" alt="F key" draggable="false">
-	    		<img src="assets/img/ctrl/i_key.png" alt="I key" draggable="false">
-	    		<img src="assets/img/ctrl/spacebar.png" alt="Spacebar" draggable="false">
+	    		<img src="assets/ctrl/wasd.png" alt="WASD keys" draggable="false">
+	    		<img src="assets/ctrl/f_key.png" alt="F key" draggable="false">
+	    		<img src="assets/ctrl/i_key.png" alt="I key" draggable="false">
+	    		<img src="assets/ctrl/spacebar.png" alt="Spacebar" draggable="false">
     		</div>
     		<div id="container_p">
 	    		<p>move</p>
