--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 			padding: 0; 
 			margin: 0;
 			text-align: center;
-			background-color: #351827;
+			background-color: #1A1A1A;
 			user-select: none;
 		}
 
@@ -28,7 +28,7 @@
 		}
 
 		p, h1, h2, h3, h4, h5 {
-			color: #F89E4C;
+			color: #F4A93D;
 			font-family: 'Cairo', sans-serif;
 		}
 
