clickables design / fixed

--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
 			text-align: center;
 			background-color: #1A1A1A;
 			user-select: none;
+			font-family: 'Cairo', sans-serif;
+			color: #FDF1E0;
 		}
 
 		p {
@@ -44,6 +46,8 @@
 			position: absolute;
 			width: 1366px;
 			height: 768px;
+			font-family: 'Cairo', sans-serif;
+			color: #FDF1E0;
 		}
 
 		header {
