zone 3 and 4 development

--- a/index.html
+++ b/index.html
@@ -126,15 +126,15 @@
     	<nav>
     		<div id="container_img">
 	    		<img src="assets/ctrl/wasd.png" alt="WASD keys" draggable="false">
+	    		<img src="assets/ctrl/shift.png" alt="shift key" draggable="false">
+	    		<img src="assets/ctrl/e_key.png" alt="E key" draggable="false">
 	    		<img src="assets/ctrl/f_key.png" alt="F key" draggable="false">
-	    		<img src="assets/ctrl/i_key.png" alt="I key" draggable="false">
-	    		<img src="assets/ctrl/spacebar.png" alt="Spacebar" draggable="false">
     		</div>
     		<div id="container_p">
 	    		<p>move</p>
+	    		<p>sprint</p>
+	    		<p>enter/exit</p>
 	    		<p>fullscreen</p>
-	    		<p>instructions</p>
-	    		<p>use power</p>
 			 </div>
     	</nav>
 
